<resources>
    <string name="app_name">Arithmetic</string>

    <string name="cancel">취소</string>
    <string name="confirm">확인</string>
    <string name="yes">예</string>
    <string name="no">아니오</string>

    <!-- 팝업 -->
    <string name="popup_default_title">안내</string>
    <string name="popup_reset_message">초기화 후 다시 가입 하시겠습니까?</string>

    <!-- 인트로 -->
    <string name="intro_login">GET STARTED</string>
    <string name="intro_optional">OPTIONAL</string>
    <string name="intro_male">Male</string>
    <string name="intro_female">Female</string>
    <string name="intro_title_join">JOIN</string>
    <string name="intro_title_login">LOGIN</string>
    <string name="intro_welcome">Welcome !!!</string>
    <string name="intro_toast_input_password">비밀번호를 입력해 주세요.</string>
    <string name="intro_toast_wrong_password">비밀번호가 일치하지 않습니다.</string>
    <string name="intro_toast_mandatory_error">닉네임은 필수 항목 입니다.</string>
    <string name="intro_welcome_forget_password">초기화</string>
    <string name="intro_button_start">CONTINUE</string>

    <!-- 메뉴 -->
    <string name="menu">메뉴</string>
    <string name="menu_addition">더하기</string>
    <string name="menu_subtraction">빼기</string>
    <string name="menu_multiply">곱하기</string>
    <string name="menu_divide">나누기</string>
    <string name="menu_fraction">분수</string>
    <string name="menu_quiz">숫자 게임</string>

    <!-- 메뉴 디스크립션 -->
    <string name="menu_addition_description">덧셈은 산술의 기본 연산 중의 하나이다.\n두 개 이상의 수를 받아 더한 값을 계산하여 답하시오.</string>
    <string name="menu_subtraction_description">뺄셈은 산술의 기본 연산 중의 하나이다.\n피감수에서 감수를 뺀 값을 계산하여 답하시오.</string>
    <string name="menu_multiply_description">곱셈은 산술의 기본 연산 중의 하나이다.\n두 자연수의 곱셈은 덧셈의 반복을 나타낸다 두수의 곱셈을 계산하여 답하시오.</string>
    <string name="menu_divide_description">나눗셈은 산술의 기본 연산 중의 하나이다.\n두 자연수의 나눗셈은 뺄셈의 반복을 나타낸다 두수의 나눗셈을 계산하여 답하시오.</string>
    <string name="menu_fraction_description">분수는 부분이 전체를 차지하는 비율을 나타내는 수식이다.\n두 분수의 덧셈, 뺄셈을 계산하여 답하시오.</string>
    <string name="menu_quiz_description">나열된 수들중 두 수를 더한 값이 모두 같도록 답하시오.</string>

    <!-- 서브 메뉴 -->
    <string name="sub_menu_unit_1">1의 단위</string>
    <string name="sub_menu_unit_10">10의 단위</string>
    <string name="sub_menu_unit_100">100의 단위</string>
    <string name="sub_menu_start">시작</string>

    <!-- Error -->
    <string name="error_select_menu_type">메뉴를 선택 후 다시 시도해 주세요.</string>

    <!-- 연산 등호 -->
    <string name="addition_operator">+</string>
    <string name="subtraction_operator">-</string>
    <string name="multiply_operator">\u00D7</string>
    <string name="divide_operator">\u00F7</string>

    <!-- 문제 -->
    <string name="quiz">연산</string>
    <string name="answer">정답 확인</string>
    <string name="empty_answer">문제를 다 풀지 않았습니다.\n채점을 진행 하시겠습니까?</string>
    <string name="retry">틀린 문제 다시 풀기</string>
    <string name="total_score">점수 : %1$d</string>
    <string name="elapsed_time">경과 시간 : %1$s</string>

</resources>
