<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/intro_rl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#FFFFFF"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp" >

        <RelativeLayout
            android:id="@+id/toolbar_title_area_rl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true">
            <ImageView
                android:id="@+id/back_button_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:paddingBottom="5dp"
                android:paddingEnd="10dp"
                android:paddingTop="5dp"
                android:src="@drawable/action_back" />

            <TextView
                android:id="@+id/title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_centerInParent="true"
                android:textColor="#000000"
                android:textSize="18sp" />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>


    <ImageView
        android:id="@+id/intro_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:scaleType="centerCrop"
        android:src="@drawable/users_people" />

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/linear_name"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:drawableLeft="@drawable/edit_user"
            android:drawablePadding="15dp"
            android:hint="Nickname"
            android:maxLength="15"
            android:maxLines="1"
            android:textColor="#FF53C39A"
            android:textColorHint="#fff"
            android:textSize="20sp" />
        <Spinner
            android:layout_width="0dp"
            android:id="@+id/spinner"
            android:layout_height="40dp"
            android:layout_weight=".41"
            android:textAlignment="center"/>

        <!--Add a spinner to select male or female-->
    </LinearLayout>

    <LinearLayout
        android:id="@+id/intro_welcome_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:text="@string/intro_welcome" />

        <TextView
            android:id="@+id/intro_welcome_nickname_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            tools:text="점핑아이" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/email_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/edit_letter"
            android:drawablePadding="15dp"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="#FF53C39A"
            android:textColorHint="#fff"
            android:textSize="20sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/email"
            android:layout_alignParentRight="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:text="@string/intro_optional"
            android:textColor="#fff" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/password_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/edit_lock"
            android:drawablePadding="15dp"
            android:hint="Password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:maxLength="15"
            android:textColor="#53c39a"
            android:textColorHint="#ffffff"
            android:textSize="20sp" />

        <Button
            android:id="@+id/intro_password_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/password"
            android:layout_alignParentRight="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:text="@string/intro_optional"
            android:textColor="#ffffff" />

    </RelativeLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login_button"
        android:text="@string/intro_login"
        android:id="@+id/intro_start_bt"
        android:textColor="#fff"
        android:foreground="?attr/selectableItemBackground"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="20sp" />
</LinearLayout>
